--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,20 +1,26 @@
 body {
-    background-color: $PrimaryWhiteColor;
-    color: $PrimaryTextColor;
-    font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  color: var(--main-color);
 }
 
 h1,
 h2,
 h3,
 h4,
-h5,
-h6,
+ul,
 p {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin: 0;
+  padding: 0;
 }
 
+img {
+  display: block;
+}
 
+a {
+  text-decoration: none;
+}
 
-
+.section {
+  padding: 94px 0;
+}
