--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,25 +1,9 @@
-@import "./utils/varibles";
-@import "./base/common";
-@import "./utils/visually-hidden";
-@import "./utils/mixin";
-@import "./base/containers";
-@import "./base/section";
-@import "./components/title";
-@import "./layout/header";
-@import "./components/nav-menu";
-@import "./components/logo";
-@import "./components/contacts";
-@import "./layout/hero";
-@import "./components/button";
-@import "./layout/features";
-@import "./layout/activity";
-@import "./utils/overlay";
-@import "./layout/team";
-@import "./components/social-networks";
-@import "./layout/clients";
-@import "./layout/footer";
-@import "./components/backdrop";
-@import "./components/modal-window";
-@import "./components/modal-form";
-@import "./components/filter";
-@import "./layout/portfolio";
+@import './util/var.scss';
+@import './base/common';
+@import './util/mixin';
+@import './base/container.scss';
+@import './component/header';
+@import './component/nav-menu';
+@import './component/logo';
+@import './component/contacts';
+@import './layout/hero';
