--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,10 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.menu-container__link_color_accent {
+  color: #2196f3;
+}
+
 .menu__contacts {
   display: flex;
   flex-direction: column;
