--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -49,11 +49,11 @@
     margin-right: auto;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/destop-1200@1x.jpg');
+      url('../images/hero/destop-1200@1x.jpg');
 
     @include retina-bgi {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero/destop-1200@2x.jpg');
+        url('../images/hero/destop-1200@2x.jpg');
     }
   }
 }
