--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,11 +10,11 @@
   background-size: cover;
 
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../../images/hero/phone-480@1x.jpg');
+    url('../images/hero/phone-480@1x.jpg');
 
   @include retina-bgi {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/phone-480@2x.jpg');
+      url('../images/hero/phone-480@2x.jpg');
   }
 
   @include phone {
@@ -22,11 +22,11 @@
     padding: 118px 0px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/header-768@1x.jpg');
+      url('../images/hero/header-768@1x.jpg');
 
     @include retina-bgi {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero/header-768@2x.jpg');
+        url('../images/hero/header-768@2x.jpg');
     }
   }
 
@@ -35,11 +35,11 @@
     padding: 118px 0px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero/header-768@1x.jpg');
+      url('../images/hero/header-768@1x.jpg');
 
     @include retina-bgi {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero/header-768@2x.jpg');
+        url('../images/hero/header-768@2x.jpg');
     }
   }
   @include destop {
@@ -53,7 +53,7 @@
 
     @include retina-bgi {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero/destop-1200@2x.jpg');
+        url('../images/hero/destop-1200@2x.jpg');
     }
   }
 }
