--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -59,7 +59,6 @@
 }
 
 .hero__title {
-  width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -72,6 +71,9 @@
   font-size: 26px;
   line-height: 1.62;
 
+  @include tablet {
+    width: 360px;
+  }
   @include destop {
     width: 696px;
     margin-bottom: 30px;
